fix: definido nome para sail network no docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -99,6 +99,7 @@ services:
 networks:
     sail:
         driver: bridge
+        name: vendas-network
 volumes:
     sail-mysql:
         driver: local
